Changed linters to avoid warnings

--- a/.gitmodules
+++ b/.gitmodules
@@ -97,7 +97,7 @@
 	url = https://github.com/tpope/vim-abolish.git
 [submodule "vim/bundle/linters.vim"]
 	path = vim/bundle/linters.vim
-	url = https://bitbucket.org/tim_heap/linters.vim
+	url = https://bitbucket.org/keymon/linters.vim
 [submodule "vim/bundle/vim-mkdir-on-write"]
 	path = vim/bundle/vim-mkdir-on-write
 	url = https://github.com/scy/vim-mkdir-on-write.git
