--- a/.gitmodules
+++ b/.gitmodules
@@ -100,7 +100,7 @@
 	url = https://bitbucket.org/keymon/linters.vim
 [submodule "vim/bundle/vim-mkdir-on-write"]
 	path = vim/bundle/vim-mkdir-on-write
-	url = https://github.com/scy/vim-mkdir-on-write.git
+	url = git@github.com:keymon/vim-mkdir-on-write.git
 [submodule "vim/bundle/vim-bufferline"]
 	path = vim/bundle/vim-bufferline
 	url = https://github.com/bling/vim-bufferline.git
