Add submodule github vim to open github urls

--- a/.gitmodules
+++ b/.gitmodules
@@ -132,6 +132,9 @@
 [submodule "vim/bundle/vim-go"]
 	path = vim/bundle/vim-go
 	url = https://github.com/fatih/vim-go.git
+[submodule "vim/bundle/github-vim"]
+	path = vim/bundle/github-vim
+	url = https://github.com/solars/github-vim
 [submodule "vim/bundle/vim-diffsaved"]
 	path = vim/bundle/vim-diffsaved
 	url = git@github.com:gangleri/vim-diffsaved.git
