--- a/.gitmodules
+++ b/.gitmodules
@@ -141,3 +141,12 @@
 [submodule "vim/bundle/vim-terraform"]
 	path = vim/bundle/vim-terraform
 	url = https://github.com/markcornick/vim-terraform
+[submodule "vim/bundle/vim-gocode"]
+	path = vim/bundle/vim-gocode
+	url = git@github.com:Blackrush/vim-gocode.git
+[submodule "vim/bundle/vim-tagbar"]
+	path = vim/bundle/vim-tagbar
+	url = https://github.com/majutsushi/tagbar
+[submodule "vim/bundle/vim-neocomplete"]
+	path = vim/bundle/vim-neocomplete
+	url = https://github.com/Shougo/neocomplete.vim
